# mate-notification-theme-slate

./: .gitignore  Makefile.am  README.md  configure.ac
src/: engine-api.h  engine.c  main.c  notification-window.c  notification-window.h  util.h
theme/: README.md  gulpfile.js  notification.ui  theme.gresource.xml
theme/3.18/: theme.css  theme_hc.css
theme/3.18/sass/: _drawing.scss  _main.scss
theme/3.20/: theme.css  theme_hc.css
theme/3.20/sass/: _colors.scss  _drawing.scss  _main.scss
